# youtube-video-intelligence

./: .gitignore  CLAUDE.md  CODEOWNERS.txt  README.md  databricks.yml  pyproject.toml
app/: app.py  app.yaml  deps.py  formatting.py  gemini.py  lakebase.py  requirements.txt  schemas.py  youtube.py
app/static/: app.jsx  index.html  utils.js
tests/: test_analysis.py  test_api.py  test_app.py  test_formatting.py  test_frontend_utils.mjs  test_lakebase.py
