[project]
name = "youtube-gemini-demo"
version = "0.0.1"
description = "Databricks demo: YouTube video analysis with Gemini via Foundation Model API"
requires-python = "==3.11.*"
dependencies = [
    "google-genai>=1.0.0,<2.0.0",
    "databricks-sdk>=0.40.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "yt-dlp>=2024.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "httpx>=0.27.0",
    "ipykernel",
    "ipywidgets",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "E402",  # module level import not at top (needed for notebook %pip cells)
]

[tool.ruff.lint.per-file-ignores]
# Databricks notebooks use runtime-injected globals (spark, dbutils, display)
# and %run-imported names not visible to static analysis
"notebooks/**/*.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["youtube_gemini_demo"]
